--- a/winter-snack/src/main/resources/templates/home.html
+++ b/winter-snack/src/main/resources/templates/home.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container" style="max-width: 600px">
     <div class="py-5 text-center">
-        <h2>겨울 간식🍴</h2>
+        <h2>Mat & Mut</h2>
     </div>
     <div class="row">
         <div class="col">
