--- a/winter-snack/src/main/resources/templates/members/registerMemberForm.html
+++ b/winter-snack/src/main/resources/templates/members/registerMemberForm.html
@@ -15,22 +15,34 @@
     <div class="py-5 text-center">
         <h2>회원가입</h2>
     </div>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">이름</label>
-        <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="이름">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">ID</label>
-        <input type="email" class="form-control form-control-lg" id="exampleFormControlInput1" placeholder="ID">
-    </div>
-    <label for="inputPassword5" class="form-label">Password</label>
-    <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
-    <div id="passwordHelpBlock" class="form-text">
-        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-    </div>
-    <div class="col-auto m">
-        <button type="submit" class="btn btn-primary btn-lg mb-3">회원 가입</button>
-    </div>
+    <h4 class="mb-3">회원 가입 정보 입력</h4>
+    <form action = "" th:action th:object="${member}" method="post">
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">이름</label>
+            <input class="form-control" id="exampleFormControlInput1" th:field="*{name}" placeholder="이름">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" th:field="*{loginId}" placeholder="Email">
+        </div>
+        <label for="inputPassword5" class="form-label">Password</label>
+        <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" th:field="*{password}">
+        <div id="passwordHelpBlock" class="form-text">
+            Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+        </div>
+        <hr class="my-4">
+        <div class="row">
+            <div class="col m">
+                <button type="submit" class="w-100 btn btn-primary btn-lg">회원 가입</button>
+            </div>
+            <div class="col m">
+                <button type="button"
+                        class="w-100 btn btn-secondary btn-lg"
+                        onclick="location.href='home.html'"
+                        th:onclick="|location.href='@{/}'|">취소</button>
+            </div>
+        </div>
+    </form>
 </div>
 </body>
 </html>
