--- a/winter-snack/src/main/resources/templates/loginHome.html
+++ b/winter-snack/src/main/resources/templates/loginHome.html
@@ -27,6 +27,14 @@
         </div>
     </div>
     <hr class="my-4">
+    <div class ="row">
+        <div class="col">
+            <button class="w-100 btn btn-primary btn-lg" type="button"
+                    th:onclick="|location.href='@{/board}'|">
+                게시판
+            </button>
+        </div>
+    </div>
 </div> <!-- /container -->
 </body>
 </html>
