--- a/MatnMut/src/main/resources/templates/board/matBoard.html
+++ b/MatnMut/src/main/resources/templates/board/matBoard.html
@@ -37,7 +37,7 @@
         </tbody>
     </table>
     <hr class="my-4">
-    <button type="button" class="btn btn-primary pull-right" onclick="location.href='/board/write'">글쓰기</button>
+    <button type="button" class="btn btn-primary pull-right" onclick="location.href='/boardList/write'">글쓰기</button>
 </div>
 </body>
 </html>
