--- a/MatnMut/src/main/resources/templates/home.html
+++ b/MatnMut/src/main/resources/templates/home.html
@@ -6,26 +6,53 @@
           href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container" style="max-width: 600px">
-    <div class="py-5 text-center">
-        <h2>Mat & Mut</h2>
-    </div>
-    <div class="row">
-        <div class="col">
-            <button class="w-100 btn btn-primary btn-lg" type="button"
-                    th:onclick="|location.href='@{/members/register}'|">
-                회원 가입
-            </button>
+    <div class="container" style="max-width: 600px">
+        <div class="py-5 text-center">
+            <h2>Mat & Mut</h2>
         </div>
-        <div class="col">
-            <button class="w-100 btn btn-primary btn-lg"
-                    onclick="location.href='items.html'"
-                    th:onclick="|location.href='@{/login}'|" type="button">
-                로그인
-            </button>
+        <div class="row">
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg" type="button"
+                        th:onclick="|location.href='@{/members/register}'|">
+                    회원 가입
+                </button>
+            </div>
+            <div class="col">
+                <button class="w-100 btn btn-primary btn-lg"
+                        onclick="location.href='items.html'"
+                        th:onclick="|location.href='@{/login}'|" type="button">
+                    로그인
+                </button>
+            </div>
         </div>
+    </div> <!-- /container -->
+    <div class="container" style="max-width:800px">
+        <div class="text-center">
+            <hr class="my-4">
+            <h2>최근 게시글</h2>
+        </div>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th>ID</th>
+                <th>게시판</th>
+                <th>제목</th>
+                <th>작성자</th>
+                <th>날짜</th>
+                <th>조회수</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="post : ${postList}">
+                <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.id}">ID</a></td>
+                <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.header}">Header</a></td>
+                <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.title}"></a></td>
+                <td th:text="${post.writer}"></td>
+                <td th:text="${post.postTime}"></td>
+                <td th:text="${post.views}"></td>
+            </tr>
+            </tbody>
+        </table>
     </div>
-    <hr class="my-4">
-</div> <!-- /container -->
 </body>
 </html>
