--- a/MatnMut/src/main/resources/templates/login/loginForm.html
+++ b/MatnMut/src/main/resources/templates/login/loginForm.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <link th:href="@{/css/bootstrap.min.css}"
         href="css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
+    </style>
     <title>Mat & Mut</title>
 </head>
 <body>
@@ -16,6 +22,11 @@
     </div>
     <h4 class="mb-3">로그인 정보 입력</h4>
     <form action = "" th:action th:object="${loginForm}" method="post">
+
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p class="field-error" th:each="err : ${#fields.globalErrors()}" th:text="${err}"></p>
+        </div>
+
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Email</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" th:field="*{loginId}" placeholder="ID">
