--- a/MatnMut/src/main/resources/templates/loginHome.html
+++ b/MatnMut/src/main/resources/templates/loginHome.html
@@ -30,6 +30,8 @@
             </form>
         </div>
     </div>
+</div> <!-- /container -->
+<div class="container" style="max-width: 800px">
     <hr class="my-4">
     <div class ="row dropdown">
         <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
@@ -42,6 +44,31 @@
             <li><a class="dropdown-item" href="/boardList/mut">Mut</a></li>
         </ul>
     </div>
+    <div class="py-5 text-center">
+        <h2>최근 게시글</h2>
+    </div>
+    <table class="table table-hover">
+        <thead>
+        <tr>
+            <th>ID</th>
+            <th>게시판</th>
+            <th>제목</th>
+            <th>작성자</th>
+            <th>날짜</th>
+            <th>조회수</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="post : ${postList}">
+            <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.id}">ID</a></td>
+            <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.header}">Header</a></td>
+            <td><a href="postView.html" th:href="@{|/board/${post.id}|}" th:text="${post.title}"></a></td>
+            <td th:text="${post.writer}"></td>
+            <td th:text="${post.postTime}"></td>
+            <td th:text="${post.views}"></td>
+        </tr>
+        </tbody>
+    </table>
 </div> <!-- /container -->
 </body>
 </html>
