--- a/MatnMut/src/main/resources/templates/members/registerMemberForm.html
+++ b/MatnMut/src/main/resources/templates/members/registerMemberForm.html
@@ -8,6 +8,10 @@
         div.m {
             margin: 20px 0px 0px 0px;
         }
+        .field-error {
+            border-color: #dc3545;
+            color: #dc3545;
+        }
     </style>
 </head>
 <body>
@@ -21,17 +25,25 @@
     <h4 class="mb-3">회원 가입 정보 입력</h4>
     <form action = "" th:action th:object="${member}" method="post">
         <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">이름</label>
-            <input class="form-control" id="exampleFormControlInput1" th:field="*{name}" placeholder="이름">
+            <label for="name" class="form-label">이름</label>
+            <input class="form-control" id="name" th:field="*{name}"
+                   th:errorclass="field-error" placeholder="이름">
+            <div class="field-error" th:errors="*{name}">이름 입력 오류</div>
         </div>
         <div class="mb-3">
             <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" th:field="*{loginId}" placeholder="Email">
+            <input type="email" class="form-control" id="exampleFormControlInput1" th:field="*{loginId}"
+                   th:errorclass="field-error" placeholder="Email">
+            <div class="field-error" th:errors="*{loginId}">로그인 아이디 입력 오류</div>
         </div>
-        <label for="inputPassword5" class="form-label">Password</label>
-        <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock" th:field="*{password}">
-        <div id="passwordHelpBlock" class="form-text">
-            Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+        <div class="mb-3">
+            <label for="inputPassword5" class="form-label">Password</label>
+            <input type="password" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock"
+                   th:field="*{password}" th:errorclass="field-error" placeholder="Password">
+            <div class="field-error" th:errors="*{password}"></div>
+            <div id="passwordHelpBlock" class="form-text">
+                Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+            </div>
         </div>
         <hr class="my-4">
         <div class="row">
